--- a/package.json
+++ b/package.json
@@ -99,7 +99,8 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.2",
     "url-loader": "^4.1.1",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "webpack-license-plugin": "^4.2.2"
   },
   "eslintConfig": {
     "extends": [
