--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jalaali-react-date-picker",
   "description": "This package is a date picker component for React that supports the Jalaali (Iranian/Shamsi/Persian) calendar system. It provides an easy-to-use interface for selecting a date in the Jalaali calendar and is fully customizable with options for setting the start and end date range, localization, and more.",
   "author": "Alireza Hemati <alirezahematideveloper@gmail.com>, Mohamad Gharouni <mohammadgharouni@icloud.com>, Mehdi Samimi <samimi.dev@gmail.com>",
-  "version": "1.0.14",
+  "version": "1.0.15",
   "license": "MIT",
   "sideEffects": false,
   "private": false,
@@ -22,7 +22,7 @@
   "bugs": {
     "url": "https://github.com/alirezahematidev/jalaali-react-date-picker/issues"
   },
-  "homepage": "/",
+  "homepage": "https://github.com/alirezahematidev/jalaali-react-date-picker#readme",
   "main": "lib/main.js",
   "module": "lib/main.js",
   "types": "lib/index.d.ts",
